--- a/Ciphers/project.cabal
+++ b/Ciphers/project.cabal
@@ -9,7 +9,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Caesar
+  exposed-modules:     Caesar, Vigenere
   build-depends:       base >=4.8 && <4.9
   hs-source-dirs:      source
   default-language:    Haskell2010
